[gd_scene load_steps=5 format=2]

[ext_resource path="res://Res/Textures/LifeForms/Box/box.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Lifeforms/BetterLifeform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 160, 150 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5, 15 )

[node name="BetterLifeform" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="MainBox" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="EyeBox" type="Sprite" parent="."]
position = Vector2( 10, 0 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 1 )

[node name="Eye" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="EyesCollider" type="CollisionShape2D" parent="Eye"]
position = Vector2( 160, 0 )
shape = SubResource( 3 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[connection signal="body_entered" from="Eye" to="." method="_on_Eye_body_entered"]
[connection signal="body_exited" from="Eye" to="." method="_on_Eye_body_exited"]
